--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                 </constraints>
                                 <state key="normal" image="Stop"/>
                                 <connections>
-                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="N8K-8K-wCi"/>
+                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Iuu-5D-EP9"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -68,10 +68,10 @@
             </objects>
             <point key="canvasLocation" x="1544.8" y="145.27736131934034"/>
         </scene>
-        <!--View Controller-->
+        <!--Play Sound View Controller-->
         <scene sceneID="Fsv-U5-dkL">
             <objects>
-                <viewController id="low-ZW-ipr" sceneMemberID="viewController">
+                <viewController id="low-ZW-ipr" customClass="playSoundViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="SQo-t3-GM1"/>
                         <viewControllerLayoutGuide type="bottom" id="bE8-GI-Oda"/>
