--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -93,10 +93,16 @@
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UFq-qZ-LVZ" userLabel="Slow Button">
                                                         <rect key="frame" x="0.0" y="0.0" width="171.5" height="151"/>
                                                         <state key="normal" image="Slow"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="low-ZW-ipr" eventType="touchUpInside" id="Pyy-gR-abM"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0q4-RG-IqT" userLabel="Fast Button">
                                                         <rect key="frame" x="171.5" y="0.0" width="171.5" height="151"/>
                                                         <state key="normal" image="Fast"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="low-ZW-ipr" eventType="touchUpInside" id="cFg-G1-A3t"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
@@ -106,10 +112,16 @@
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T2I-YR-FrH" userLabel="HighPitch Button">
                                                         <rect key="frame" x="0.0" y="0.0" width="171.5" height="150.5"/>
                                                         <state key="normal" image="HighPitch"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="low-ZW-ipr" eventType="touchUpInside" id="Xg8-kg-BtE"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5WO-fL-uGo" userLabel="LowPitch Button">
                                                         <rect key="frame" x="171.5" y="0.0" width="171.5" height="150.5"/>
                                                         <state key="normal" image="LowPitch"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="low-ZW-ipr" eventType="touchUpInside" id="6RH-Qz-1d0"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
@@ -119,30 +131,29 @@
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aqd-SN-CQn" userLabel="Echo Button">
                                                         <rect key="frame" x="0.0" y="0.0" width="171.5" height="151"/>
                                                         <state key="normal" image="Echo"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="low-ZW-ipr" eventType="touchUpInside" id="Iw2-Ry-Svl"/>
+                                                        </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9y6-r5-ozr" userLabel="Reverb Button">
                                                         <rect key="frame" x="171.5" y="0.0" width="171.5" height="151"/>
                                                         <state key="normal" image="Reverb"/>
+                                                        <connections>
+                                                            <action selector="playSoundForButton:" destination="low-ZW-ipr" eventType="touchUpInside" id="smj-dZ-QKx"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BSK-EJ-Jvn">
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="QnM-fw-c5L">
                                                 <rect key="frame" x="0.0" y="452.5" width="343" height="150.5"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="OnH-WT-2s3">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aMv-r4-dEa">
                                                         <rect key="frame" x="0.0" y="0.0" width="343" height="150.5"/>
-                                                        <subviews>
-                                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="QiC-Mq-e9k">
-                                                                <rect key="frame" x="0.0" y="0.0" width="343" height="150.5"/>
-                                                                <subviews>
-                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zU6-iz-QUC">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="343" height="150.5"/>
-                                                                        <state key="normal" image="Stop"/>
-                                                                    </button>
-                                                                </subviews>
-                                                            </stackView>
-                                                        </subviews>
-                                                    </stackView>
+                                                        <state key="normal" image="Stop"/>
+                                                        <connections>
+                                                            <action selector="stopButtonPressed:" destination="low-ZW-ipr" eventType="touchUpInside" id="4AR-mk-xEl"/>
+                                                        </connections>
+                                                    </button>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
@@ -158,6 +169,15 @@
                             <constraint firstItem="P0c-m4-hAC" firstAttribute="top" secondItem="SQo-t3-GM1" secondAttribute="bottom" id="n3u-8g-Ja8"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="chipmunkButton" destination="T2I-YR-FrH" id="Mqu-HJ-s4h"/>
+                        <outlet property="echoButton" destination="Aqd-SN-CQn" id="WD5-Gs-Qxd"/>
+                        <outlet property="rabbitButton" destination="0q4-RG-IqT" id="LxC-TX-06n"/>
+                        <outlet property="reverbButton" destination="9y6-r5-ozr" id="kPa-Ne-pwf"/>
+                        <outlet property="snailButton" destination="UFq-qZ-LVZ" id="3WF-qf-yH3"/>
+                        <outlet property="stopButton" destination="aMv-r4-dEa" id="dmK-VC-4PL"/>
+                        <outlet property="vaderButton" destination="5WO-fL-uGo" id="PgA-A9-28H"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kkr-M9-wjO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
